<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_eventosDisponibles"
            android:icon="@drawable/ic_eventos_disponibles_foreground"
            android:title="@string/menu_eventoDis"/>
        <item
            android:id="@+id/nav_eventosReservados"
            android:icon="@drawable/ic_eventos_reservados_foreground"
            android:title="@string/menu_eventoRes" />
        <item
            android:id="@+id/nav_extras"
            android:icon="@drawable/ic_extras_foreground"
            android:title="@string/menu_eventoEx" />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_gestion_usuarios_foreground"
            android:title="@string/menu_eventoPer" />
    </group>
</menu>