<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonguardar"
        android:layout_below="@+id/buttonguardar"
        android:text="@string/botonShared1" />



    <EditText
        android:id="@+id/CampoAlias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/CampoNombre"
        android:layout_below="@+id/CampoNombre"
        android:inputType="text"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/CampoNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="140dp"
        android:inputType="text"
        android:ems="10"
        tools:context=".contenidoExtras.sharedPreferences.SharedPreference"/>


    <Button
        android:id="@+id/buttonguardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/CampoAlias"
        android:layout_centerHorizontal="true"
        android:text="@string/botonShared2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/CampoNombre"
        android:layout_alignLeft="@+id/buttonguardar"
        android:layout_marginBottom="38dp"
        android:text="@string/titulo18" />

    <ToggleButton
        android:id="@+id/toggleButton1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button1"
        android:layout_below="@+id/button1"
        android:text="@string/textotoggle" />

    <Button
        android:id="@+id/buttonmostrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/toggleButton1"
        android:layout_below="@+id/toggleButton1"
        android:text="@string/botonShared3" />

</RelativeLayout>