<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:padding="10dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/bienvenido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="@string/titulo8"
        android:textColor="@color/white"
        android:textSize="35dp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="59dp"
        tools:layout_editor_absoluteY="29dp" />

    <EditText
        android:id="@+id/usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bienvenido"
        android:background="#30ffffff"
        android:drawableLeft="@drawable/ic_baseline_person_outline_24"
        android:drawablePadding="20dp"
        android:hint="Usuario"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="23dp"
        tools:layout_editor_absoluteY="106dp" />

    <EditText
        android:id="@+id/contraseña1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/usuario"
        android:layout_marginTop="35dp"
        android:background="#30ffffff"
        android:drawableLeft="@drawable/ic_baseline_info_24"
        android:drawablePadding="20dp"
        android:hint="Contraseña"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/usuario"
        tools:layout_editor_absoluteX="23dp" />


    <EditText
        android:id="@+id/contraseña2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/contraseña1"
        android:layout_marginTop="35dp"
        android:background="#30ffffff"
        android:drawableLeft="@drawable/ic_baseline_info_24"
        android:drawablePadding="20dp"
        android:hint="Repite contraseña"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/contraseña1"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="20dp" />

    <Button
        android:id="@+id/btnregistro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/contraseña2"
        android:layout_marginTop="50dp"
        android:text="@string/boton9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contraseña2" />

    <Button
        android:id="@+id/btnlogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnregistro"
        android:layout_marginTop="15dp"
        android:text="@string/boton8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnregistro" />

</RelativeLayout>